syntax = "proto3";

package chat;
option go_package = "./;chat";

message mensajeBienvenida{
    string body = 1;
}

message mensajeEntreEtapas{
    string body = 1;
}

message mensajeEtapa1{
    int32 body = 1;
}

service ChatService{
    rpc Bienvenida(mensajeBienvenida) returns (mensajeBienvenida) {}
    rpc EntreEtapas(mensajeEntreEtapas) returns (mensajeEntreEtapas) {}
    rpc Etapa1(mensajeEtapa1) returns (mensajeEtapa1) {}
}
